Mon Jan  8 13:06:42 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/ToDo: Rename to ...
	* docs/TODO: ... this for consistency with other projects.
	* GNUmakefile.in (_docs), docs/README, docs/HACKING: Update
	  references.

Mon Jan  8 12:45:33 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AC_PREREQ): Require autoconf 2.59, for gnulib.

Mon Jan  8 12:37:12 GMT 2007  Colin Watson  <cjwatson@debian.org>

	Update setenv module from gnulib.

	* m4/setenv.m4: New file.
	* .bzrignore: Ignore only gettextize-generated files in m4
	  directory.
	* autogen.sh: Pass '-I m4' option to aclocal.
	* configure.ac: Use gt_FUNC_SETENV.
	* lib/setenv.c, lib/unsetenv.c: Update.

Mon Jan  8 12:14:59 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4 (MAN_FUNC_STRSIGNAL): Include <string.h> for
	  strsignal.

Mon Jan  8 12:10:08 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4 (MAN_FUNC_FNMATCH): New macro to check whether
	  fnmatch supports the FNM_CASEFOLD flag (a GNU extension).
	* configure.ac: Use it.

Mon Jan  8 10:39:24 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/xsigaction.c: New file: sigaction with EINTR checking.
	* include/manconfig.h.in: Add prototype.
	* lib/Makefile.in: Build xsigaction.
	* lib/cleanup.c (sighandler, trap_signal, untrap_signal): Use
	  xsigaction instead of bare sigaction.
	* lib/pipeline.c (pipeline_start, pipeline_wait,
	  pipeline_install_sigchld): Use xsigaction instead of
	  sigaction-plus-EINTR-check.

Mon Jan  8 09:55:48 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Rename lynx variable to browser. Check for
	  www-browser (as on Debian) before lynx.
	* include/manconfig.h.in: Rename lynx variable to browser.

Mon Jan  8 09:15:04 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (main): If no database changes were necessary, then:
	  don't bother committing database changes or running straycats;